# python-graphs

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pyci.yml
src/hexlet/: graphs.py
tests/: test_graphs.py
