[project]
name = "hexlet-graphs"
version = "0.1.3"
description = ""
authors = [{name = "Hexlet Team <info@hexlet.io>"}]
license = "ISC"
homepage = "https://github.com/hexlet-components/python-graphs"
repository = "https://github.com/hexlet-components/python-graphs"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexlet"]
